# Enterprise_RAG_System

.claude/: settings.local.json
Enterprise_RAG_System/: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
Enterprise_RAG_System/.claude/: settings.json
Enterprise_RAG_System/app/: config.py  main.py
Enterprise_RAG_System/app/api/: _utils.py  audit.py  auth.py  chat.py  documents.py  rate_limit.py
Enterprise_RAG_System/app/etl/: chunker.py  cleaner.py  parser.py  pipeline.py
Enterprise_RAG_System/app/eval/: __init__.py  cli.py  dataset.py  metrics.py  report.py  runner.py
Enterprise_RAG_System/app/models/: document.py
Enterprise_RAG_System/app/rag/: hybrid_retriever.py  query_engine.py  reranker.py
Enterprise_RAG_System/app/services/: ingestion.py  query_service.py
Enterprise_RAG_System/docs/: api.md  architecture.md  configuration.md  etl.md  evaluation.md  getting-started.md  index.md
Enterprise_RAG_System/docs/superpowers/plans/: 2026-06-17-phase2-etl-plan.md
Enterprise_RAG_System/docs/superpowers/specs/: 2026-06-17-phase2-etl-design.md
Enterprise_RAG_System/scripts/: ingest.py
Enterprise_RAG_System/tests/: conftest.py  test_api_chat.py  test_api_documents.py  test_chunker.py  test_cleaner.py  test_eval.py  test_ingestion_service.py  test_models.py  test_parser.py  test_pipeline.py  test_rag.py
Enterprise_RAG_System/tests/fixtures/: sample.md  sample.txt
Enterprise_RAG_System/web_ui/: api_client.py  app.py  chat.py  documents.py
finance_cli/: CLAUDE.md  app.py  config.py  database.py  ui_add.py  ui_stats.py  ui_view.py
