[project]
name = "enterprise-rag-system"
version = "0.1.0"
description = "Enterprise RAG knowledge Q&A system — ETL → HybridSearch → Reranker → Streaming Q&A"
requires-python = ">=3.12,<3.14"
readme = "README.md"

dependencies = [
    # ── Web 框架 ──
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # ── RAG 核心编排 ──
    "llama-index-core>=0.12.0",
    "llama-index-llms-dashscope>=0.4.0",
    "llama-index-embeddings-dashscope>=0.3.0",
    "llama-index-vector-stores-chroma>=0.4.0",
    "llama-index-retrievers-bm25>=0.4.0",
    "llama-index-postprocessor-flag-embedding-reranker>=0.4.0",
    # ── 向量数据库 ──
    "chromadb>=0.5.0",
    # ── 文档解析 ──
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
    "markitdown>=0.1.0",
    # ── 前端 ──
    "streamlit>=1.38.0",
    # ── 评估 ──
    "ragas>=0.2.0",
    # ── 工具库 ──
    "python-multipart>=0.0.12",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    "jieba>=0.42.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "web_ui"]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.uv]
# uv 全局配置（不含依赖声明）

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
